--- a/buildout.d/fabric.cfg
+++ b/buildout.d/fabric.cfg
@@ -8,8 +8,8 @@ fabric-parts =
     fabric-config
 
 [fabric]
-host = 6zu4
-hostname = 6zu4.vorwaerts-werbung.de
+host = z13
+hostname = z13.ade25.de
 webserver = /opt/webserver/buildout.webserver
 directory = /opt/sites/${plone-site:site-id}/buildout.${plone-site:site-id}
 
