--- a/deployment.cfg
+++ b/deployment.cfg
@@ -33,7 +33,9 @@ find-links =
 # Packages to check out/update when buildout is run
 # Clear this out if you want to stick to internally released eggs - see above.
 auto-checkout =
-    example.sitetheme
+    ade25.panelpage
+    ade25.toolbar
+    klikev.sitetheme
 
 # Make sure buildout never attempts to update packages automatically for
 # production use.
