--- a/packages.cfg
+++ b/packages.cfg
@@ -42,7 +42,7 @@ devtools =
 	Products.DocFinderTab
 
 [sources]
-example.sitetheme 		= fs example.sitetheme
+klikev.sitetheme 		= fs klikev.sitetheme
 
 # Additional checkouts
 ade25.banner            = git git@github.com:ade25/ade25.banner.git
