Update development profile and signin styles

--- a/development.cfg
+++ b/development.cfg
@@ -25,7 +25,7 @@ auto-checkout =
     ade25.fabfiles
     ade25.panelpage
     ade25.toolbar
-    example.sitetheme
+    klikev.sitetheme
     sauna.reload
 
 always-checkout = force
