Update klikev buildout

--- a/buildout.d/fabric.cfg
+++ b/buildout.d/fabric.cfg
@@ -11,7 +11,7 @@ fabric-parts =
 host = z13
 hostname = z13.ade25.de
 webserver = /opt/webserver/buildout.webserver
-directory = /opt/sites/${plone-site:site-id}/buildout.${plone-site:site-id}
+directory = /opt/sites/klikev/buildout.klikev
 
 [fabric-build]
 recipe=zc.recipe.egg
