Add sitecontent package and rebuild theme

--- a/development.cfg
+++ b/development.cfg
@@ -19,12 +19,13 @@ extends =
     buildout.d/lxml.cfg
     buildout.d/fabric.cfg
     packages.cfg
-    
+
 
 auto-checkout =
     ade25.fabfiles
     ade25.panelpage
     ade25.toolbar
+    klikev.sitecontent
     klikev.sitetheme
     sauna.reload
 
@@ -81,7 +82,7 @@ interpreter = zopepy
 
 [paster]
 recipe = zc.recipe.egg
-eggs = 
+eggs =
     ZopeSkel
     zopeskel.dexterity
     PasteScript
@@ -91,7 +92,7 @@ entry-points = paster=paste.script.command:run
 
 [zopeskel]
 recipe = zc.recipe.egg
-eggs = 
+eggs =
     ZopeSkel
     zopeskel.dexterity
 
