--- a/packages.cfg
+++ b/packages.cfg
@@ -1,39 +1,40 @@
 [buildout]
-extensions = 
+extensions =
 	mr.developer
 
 show-picked-versions = true
 
-extends = 
+extends =
 	http://dist.plone.org/release/4.3.3-pending/versions.cfg
-    https://raw.github.com/plone/plone.app.widgets/master/versions.cfg
+  https://raw.github.com/plone/plone.app.widgets/master/versions.cfg
 	versions.cfg
 
-find-links = 
+find-links =
 	http://dist.vorwaerts-werbung.de/public
 
 versions = versions
 unzip = true
 
 [eggs]
-main = 
+main =
+  klikev.sitecontent
 	klikev.sitetheme
-    ade25.panelpage
-    ade25.toolbar
+  ade25.panelpage
+  ade25.toolbar
 
-addon = 
+addon =
 	Pillow
-    Products.PasswordStrength
-    collective.emaillogin4
+  Products.PasswordStrength
+  collective.emaillogin4
 	plone.app.caching
 	plone.app.contenttypes
 	plone.app.toolbar
 	plone.app.widgets
 
-test = 
+test =
 	example.sitetheme [test]
 
-devtools = 
+devtools =
 	bpython
 	plone.reload
 	sauna.reload
@@ -42,6 +43,7 @@ devtools =
 	Products.DocFinderTab
 
 [sources]
+klikev.sitecontent  = fs klikev.sitecontent
 klikev.sitetheme 		= fs klikev.sitetheme
 
 # Additional checkouts
