--- a/known-good-versions.cfg
+++ b/known-good-versions.cfg
@@ -1430,3 +1430,74 @@ z3c.jbot = 0.7.1
 # Required by:
 # z3c.recipe.staticlxml==0.10
 zc.recipe.cmmi = 1.3.5
+
+# Added by buildout at 2014-04-15 13:16:06.597514
+Cheetah = 2.2.1
+Fabric = 1.8.3
+Products.DocFinderTab = 1.0.5
+Products.PDBDebugMode = 1.3.1
+Products.PasswordStrength = 0.3.1
+Products.PrintingMailHost = 0.7
+PyYAML = 3.11
+argh = 0.24.1
+bpython = 0.12
+collective.emaillogin4 = 1.3
+corneti.recipes.codeintel = 0.3
+jarn.mkrelease = 3.8
+lazy = 1.1
+paramiko = 1.12.3
+pathtools = 0.1.2
+pycrypto = 2.6.1
+setuptools = 3.4.4
+setuptools-git = 1.0
+setuptools-hg = 0.4
+setuptools-subversion = 3.1
+watchdog = 0.7.1
+z3c.recipe.staticlxml = 0.10
+zc.buildout = 2.2.1
+zettwerk.i18nduder = 0.2.1
+zopeskel.dexterity = 1.5.4.1
+
+# Required by:
+# collective.beaker==1.0b3
+Beaker = 1.6.4
+
+# Required by:
+# ade25.panelpage==1.0.0
+collective.beaker = 1.0b3
+
+# Required by:
+# plone.app.event==1.1.a1
+collective.elephantvocabulary = 0.2.4
+
+# Required by:
+# ade25.fabfiles==1.0
+cuisine = 0.7.1
+
+# Required by:
+# paramiko==1.12.3
+ecdsa = 0.11
+
+# Required by:
+# zettwerk.i18nduder==0.2.1
+i18ndude = 3.3.3
+
+# Required by:
+# ade25.panelpage==1.0.0
+plone.api = 1.1.0
+
+# Required by:
+# klikev.sitetheme==1.0
+plone.app.themingplugins = 1.0b1
+
+# Required by:
+# plone.app.toolbar==1.4.0
+plone.tiles = 1.2
+
+# Required by:
+# plone.app.themingplugins==1.0b1
+z3c.jbot = 0.7.1
+
+# Required by:
+# z3c.recipe.staticlxml==0.10
+zc.recipe.cmmi = 1.3.5
