--- a/deployment.cfg
+++ b/deployment.cfg
@@ -35,7 +35,9 @@ find-links =
 auto-checkout =
     ade25.panelpage
     ade25.toolbar
+    klikev.sitecontent
     klikev.sitetheme
+    vwc.tiles
 
 # Make sure buildout never attempts to update packages automatically for
 # production use.
