--- a/development.cfg
+++ b/development.cfg
@@ -27,6 +27,7 @@ auto-checkout =
     ade25.toolbar
     klikev.sitecontent
     klikev.sitetheme
+    vwc.tiles
     sauna.reload
 
 always-checkout = force
