--- a/packages.cfg
+++ b/packages.cfg
@@ -21,6 +21,7 @@ main =
 	klikev.sitetheme
   ade25.panelpage
   ade25.toolbar
+  vwc.tiles
 
 addon =
 	Pillow
@@ -48,9 +49,10 @@ klikev.sitetheme 		= fs klikev.sitetheme
 
 # Additional checkouts
 ade25.banner            = git git@github.com:ade25/ade25.banner.git
-ade25.toolbar 			= git git@github.com:ade25/ade25.toolbar.git
-ade25.typekit 			= git git@github.com:ade25/ade25.typekit.git
+ade25.toolbar 			    = git git@github.com:ade25/ade25.toolbar.git
+ade25.typekit 			    = git git@github.com:ade25/ade25.typekit.git
 ade25.fabfiles          = git git@github.com:ade25/ade25.fabfiles.git
 ade25.panelpage         = git git@github.com:ade25/ade25.panelpage.git
-sauna.reload 			= git https://github.com/epeli/sauna.reload.git
+vwc.tiles               = git git@github.com:vwc/vwc.tiles.git
+sauna.reload 			      = git https://github.com/epeli/sauna.reload.git
 
