update plone verion to 4.3.6

--- a/versions.cfg
+++ b/versions.cfg
@@ -2,8 +2,8 @@
 # ============================================================
 
 [versions]
-zc.buildout                     = >= 2.2.1
-setuptools                      = >= 2.2
+zc.buildout                     = 2.2.5
+setuptools                      = 7.0
 buildout.sendpickedversions     = 1.0-alpha.1
 DateTime                        = 4.0.1
 ZopeSkel                        = 2.21.2
@@ -17,9 +17,10 @@ plone.app.querystring           = 1.2.2
 plone.app.relationfield         = 1.2.2
 plone.app.toolbar               = 1.4.0
 plone.app.vocabularies          = 2.1.15
-plone.app.widgets               = 1.7.1
+plone.app.widgets               = 1.8.0
 plone.formwidget.querystring    = 1.1.2
 plone.formwidget.recurrence     = 1.2.5
 six                             = 1.6.1
 wildcard.foldercontents         = 2.0b3
 z3c.form                        = 3.2.1
+Products.CMFPlone				= >=4.3.4
