--- a/versions.cfg
+++ b/versions.cfg
@@ -23,4 +23,5 @@ plone.formwidget.recurrence     = 1.2.5
 six                             = 1.6.1
 wildcard.foldercontents         = 2.0b3
 z3c.form                        = 3.2.1
-Products.CMFPlone				= >=4.3.4
+plone.app.upgrade 				= 1.3.21
+Products.GenericSetup			= >=1.8.1
