Update backup part

--- a/deployment.cfg
+++ b/deployment.cfg
@@ -126,11 +126,13 @@ interpreter = zopepy
 
 [backup]
 recipe = collective.recipe.backup
+blob_storage = ${buildout:directory}/var/blobstorage
 location = /opt/backups/${sites:main}/backups
 snapshotbackup = /opt/backups/${sites:main}/snapshotbackups
 keep = 2
 full = false
-debug = true
+debug = false
+enable_zipbackup = true
 
 [repozo]
 recipe = zc.recipe.egg
